concord_macros/tests/dsl/fail/fail_secret_block_in_policy_expr.stderr
error: secret references are only allowed in credential declarations
  --> tests/dsl/fail/fail_secret_block_in_policy_expr.rs:12:33
   |
12 |     header "X-Leak" = { let x = secret.token; x }
   |                                 ^^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_secret_block_in_policy_expr.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
